# unsplash_photo_trends

./: .gitignore  .pre-commit-config.yaml  .prefectignore  README.md  prefect.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run-unit-tests.yml
deployments/: healthcheck-dev-deployment.yaml  ingest-photos-gcs-prod-deployment.yaml  ingest-topics-gcs-dev-deployment.yaml  ingest-topics-gcs-prod-deployment.yaml  ingest-topics-gcs-test-deployment.yaml  sync-gcs-to-bigquery-deployment.yaml  sync-gcs-to-bigquery-prod-deployment.yaml  sync-topics-gcs-to-bigquery-dev-deployment.yaml  sync-topics-gcs-to-bigquery-prod-deployment.yaml  sync-topics-gcs-to-bigquery-test-deployment.yaml
images/prefect_runner/: Dockerfile
make/: .env.example  00_setup_gcp.mk  01_setup_development.mk  02_setup_infra.mk  03_deploy_flow.mk  04_setup_prefect.mk  05_test_flow.mk  base.env.example
references/: unsplash_dataset_data_dictionary.md
src/: data_types.py  decoder.py  utils.py
src/blocks/: create_bigquery.py  create_bright_data_secrets.py  create_env_string.py  create_gcp_credentials.py  create_github.py  create_google_cloud_run.py  create_unsplash_access_key.py  create_vertex_ai.py  create_zenrows_api_key.py
src/etl/: extract.py  load.py
src/prefect/: generic_tasks.py  healthcheck.py  ingest_monthly_platform_stats.py  ingest_monthly_platform_stats_gcs.py  ingest_photos_expanded_napi_bigquery.py  ingest_photos_expanded_napi_gcs.py  ingest_photos_gcs.py  ingest_photos_napi_gcs.py  ingest_topics_gcs.py  sync_gcs_to_bigquery.py  sync_topics_gcs_to_bigquery.py
src/scripts/: create_blocks.py  create_env_variable.py  create_variables.py  env_init.sh  save_variables.py
tests/: test_generic_tasks.py  test_ingest_topics_gcs.py
