[tool.poetry]
name = "unsplash-photo-trends"
version = "0.1.0"
description = ""
authors = ["Marc-Philipp Esser <m-esser@mail.de>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "etl", from = "src"}
    ]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
prefect-gcp = {extras = ["bigquery"], version = "^0.4.6"}
ipykernel = "^6.25.1"
aiohttp = "^3.8.5"
pandas = "^2.1.0"
prefect-github = "^0.1.5"
google-cloud = "^0.34.0"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.11.4"}
pyarrow = "^13.0.0"
zenrows = "^1.3.1"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
isort = "^5.12.0"
interrogate = "^1.5.0"
autoflake = "^2.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
